--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
 		"filepond-plugin-image-exif-orientation": "^1.0.11",
 		"filepond-plugin-image-preview": "^4.6.11",
 		"rollup-plugin-node-polyfills": "^0.2.1",
-		"svelte-filepond": "^0.2.0"
+		"svelte-filepond": "^0.2.0",
+		"vite-plugin-cross-origin-isolation": "^0.1.6"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "next",
